Extraction Ães caractéristiques avec lbph et test pour evaluer les performances